Hiver2017/LOG3210/TP1/LangageH17.jjt
options {
	JAVA_UNICODE_ESCAPE=true;
	STATIC=false;					// 1 seul parseur actif a la fois (+ rapide)
	MULTI=true;						// type noeud = f(nom noeud)
	VISITOR=true;					// Cree une methode accept(visiteur)
	NODE_USES_PARSER=true;
}

//
// PARSER DEFINITION
//

PARSER_BEGIN(LEParser)

class LEParser
{
	public static void main(String args[])
	{
		System.out.println("Lecture de l'entree standard...");
		LEParser c = new LEParser(new java.io.DataInputStream(System.in));
		try {
			SimpleNode n = c.Program();
			System.out.println("Fichier analyse avec succes!");
			n.dump(" ");
		} catch (Exception e) {
			System.out.println("Erreur: " + '\n' + e);
			System.exit(-1);
		}
	}
}

PARSER_END(LEParser)

//
// LEXICAL ANALYSIS
//

// White space

SKIP :
{
	< ( " " | "\t" | "\n" | "\r" )+	>
}

// Comments

MORE :
{
  "//" : IN_SINGLE_LINE_COMMENT
|
  <"/**" ~["/"]> { input_stream.backup(1); } : IN_FORMAL_COMMENT
|
  "/*" : IN_MULTI_LINE_COMMENT
}

<IN_SINGLE_LINE_COMMENT>
SPECIAL_TOKEN :
{
  <SINGLE_LINE_COMMENT: "\n" | "\r" | "\r\n" > : DEFAULT
}

<IN_FORMAL_COMMENT>
SPECIAL_TOKEN :
{
  <FORMAL_COMMENT: "*/" > : DEFAULT
}

<IN_MULTI_LINE_COMMENT>
SPECIAL_TOKEN :
{
  <MULTI_LINE_COMMENT: "*/" > : DEFAULT
}

<IN_SINGLE_LINE_COMMENT,IN_FORMAL_COMMENT,IN_MULTI_LINE_COMMENT>
MORE :
{
  < ~[] >
}





// Keywords
TOKEN :
{	
	< DECL_TYPES: <BOOL> | <INT> | <FLOAT> | <STRING> > |
	< IF: "if"	> 

	// A COMPLETER

	| < ELSE: "else" > |
	< WHILE: "while" > |
	< #BOOL: "bool" > |
	< #INT: "int" > |
	< #FLOAT: "float" > |
	< #STRING: "string" > 
	
}

// Operators
TOKEN :
{
	< ASSIGN_OPERATORS: <EQUAL> | <PLUS_EQUAL> | <MINUS_EQUAL> | <DIVISION_EQUAL> | <MULTIPLICATION_EQUAL> | <PUISSANCE_EQUAL> > |

	< COMPARISON_OPERATORS: <PLUSPETIT> | <PLUSPETIT_EQUAL> | <PLUSGRAND> | <PLUSGRAND_EQUAL> | <EQUAL_EQUAL> | <NOT_EQUAL> > |


	< PLUS: "+" > |
	< MINUS: "-" > |
	< #EQUAL: "=" > |
	< LPAREN: "(" > |
	< RPAREN: ")" > |
	< SEMICOLON: ";" > |
	< COMMA: "," >

	// A COMPLETER
	| < #PLUS_EQUAL: "+=" > |
	< #MINUS_EQUAL: "-=" > |
	< #DIVISION_EQUAL: "/=" > |
	< #MULTIPLICATION_EQUAL: "*=" > |
	< #PUISSANCE_EQUAL:  "^=" > |

	< #PLUSPETIT: "<" > |
	< #PLUSPETIT_EQUAL: "<=" > |
	< #PLUSGRAND: ">" > |
	< #PLUSGRAND_EQUAL: ">=" > |
	< #EQUAL_EQUAL: "==" > |
	< #NOT_EQUAL: "!=" > |

	< ET: "&&" > |
	< OU: "||" > |

	< NOT: "not" > |

	< MULTIPLICATION: "*" > |
	< DIVISION: "/" > |

	< PUISSANCE: "^" > |	

	< LBRACKET: "{" > |
	< RBRACKET: "}" > |

	<COLON: ":" >
}





// Identifiers and numbers
TOKEN :
{
	< IDENTIFIER: <LETTER> ( <LETTER> | <DIGIT> )* > |
	< #LETTER: ["a"-"z","A"-"Z","_"] > |
	< #DIGIT: ["0"-"9"] > |
	< INTEGER: ["1"-"9"] (["0"-"9"])* | "0" > |
	// // Caution! Allows numbers such as "0000.23"
	< REAL: (<INTEGER>)+ "." (["0"-"9"])+ (<EXPONENT>)? |
			  (<INTEGER>)+ <EXPONENT> > |
	< #EXPONENT: ["e","E"] (["+","-"])? (["0"-"9"])+ >
}







//
// SYNTAX ANALYSIS
//

ASTProgram Program() : { }
{
	Block() <EOF> { return jjtThis; }
	
	// Block() represente un non-terminal.
	// <EOF> represente le terminal indiquant la fin du flot de caracteres.
}

void Block() : { }
{
	// TODO: Un bloc est compose de 0, 1 ou plusieurs intructions.
	 (Decl() <SEMICOLON>)* (LOOKAHEAD(2) (Stmt() <SEMICOLON> ) | If() | While() | Fct() <SEMICOLON> )*
}

void Expr() : { }
{ 
	(Var() (LOOKAHEAD(1) Arithmetique_operators() Expr())*) | (<LPAREN> Expr() (LOOKAHEAD(1) Arithmetique_operators() Expr())* <RPAREN>) | (LOOKAHEAD(1) Arithmetique_operators() Expr())+
}

void Stmt() : { }
{
	// TODO: Represente une instruction.
	(LOOKAHEAD(4) <IDENTIFIER> <ASSIGN_OPERATORS>)+ (Expr())+ 
}

void While() : { }
{
	<WHILE> [<NOT>] Var() ((<COMPARISON_OPERATORS> | Arithmetique_operators())  Var())* <COLON> <LBRACKET> Block() <RBRACKET>
}

void If() : { }
{
	<IF> [<NOT>] Var() ((<COMPARISON_OPERATORS> | Arithmetique_operators()) Var() )* <COLON> <LBRACKET> Block() <RBRACKET> [<ELSE> <LBRACKET> Block() <RBRACKET>]
}

void Decl() : { }
{
	<DECL_TYPES> [Negative_value()] <IDENTIFIER> [LOOKAHEAD(2) <ASSIGN_OPERATORS> (Stmt() | Expr())]
}

void Fct() : { }
{
	<IDENTIFIER> <LPAREN> Expr() [<COMMA> Expr()] <RPAREN>
}

void Var() : { }
{
	[Negative_value()] (<IDENTIFIER> | <INTEGER> | <REAL>)
} 

void Arithmetique_operators() : { }
{
	<PLUS> | <MINUS> | <MULTIPLICATION> | <DIVISION> | <PUISSANCE> 
}

void Negative_value() : { }
{
	<MINUS>
}

// A COMPLETER
// Suggestion: ecrire les regles de la grammaire
// Rappel: Un non-terminal doit definir une fonction.
//         Un terminal est, par exemple, : <IDENTIFIER>
